--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Simple game that mission is to click on the button and win the game. Catch the button and click.">
-    <meta name="keywords" name="game, button, button-game, fun, fun-game, simple-game, hover, click">
+    <meta name="keywords" content="game, button, button-game, fun, fun-game, simple-game, hover, click">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="Style/style.css">
     <title>Catch</title>
